--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a 
                         href="#"
                         class="navbar-brand mb-0 h1"
-                         >UEV<img class ="d-inline-block align-top" src="assets/img/uev_icon.html" width="30" height="30" />Solutions
+                         >UEV<img class ="d-inline-block align-top" src="assets/img/uev_icon.png" width="30" height="30" />Solutions
                          
                     </a>
                     <button 
