--- a/index.html
+++ b/index.html
@@ -54,22 +54,27 @@
                         <span class ="navbar-toggler-icon"></span> 
                     </button>
 
-                    <div 
-                        class = "collapse navbar-collapse"
-                        id = "navbarNav">
-                        <ul class="navbar-nav ms-auto text-center">
+
+                <div 
+                class = "collapse navbar-collapse"
+                id = "navbarNav">
+                <ul class="navbar-nav ms-auto text-center">
+
+                    <li class="nav-item ">
+                        <a href="pages/index.html" class="nav-link">
+                            Contact
+                        </a>
+                    </li>
+
+                    <li class="nav-item ">
+                        <a href="pages/about.html" class="nav-link">
+                            About
+                        </a>
+                    </li>
 
 
-                            <li class="nav-item ">
-                                <a href="pages/about.html" class="nav-link">
-                                    Contact Us
-                                </a>
-                            </li>
-
-
-                        </ul>
-                    </div>                     
-                </nav>
+                </ul>
+            </div>  
         
     <body>
         
