--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <!-- Navigation-->
             <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html">UEV Solutions</a>
+                    <a class="navbar-brand" href="index.html">UEV <img src="assets/img/uev_icon.png" width="30" height="30" > Solutions</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
