--- a/about.html
+++ b/about.html
@@ -73,38 +73,32 @@
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <div class="text-center">
-                        <h2 class="fw-bolder">Our team</h2>
+                        <h2 class="fw-bolder">SDG Goals</h2>
                         <p class="lead fw-normal text-muted mb-5">Dedicated to quality and your success</p>
                     </div>
                     <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Ibbie Eckart</h5>
+                                <img class="img-fluid mb-4 px-4" src="assets/img/ep07.jpg" alt="..." />
+                                <h5 class="fw-bolder">Goal 7</h5>
                                 <div class="fst-italic text-muted">Founder &amp; CEO</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Arden Vasek</h5>
+                                <img class="img-fluid mb-4 px-4" src="assets/img/ep09.jpg" alt="..." />
+                                <h5 class="fw-bolder">Goal 9</h5>
                                 <div class="fst-italic text-muted">CFO</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-sm-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Toribio Nerthus</h5>
+                                <img class="img-fluid mb-4 px-4" src="assets/img/ep13.jpg" alt="..." />
+                                <h5 class="fw-bolder">Goal 13</h5>
                                 <div class="fst-italic text-muted">Operations Manager</div>
                             </div>
                         </div>
-                        <div class="col mb-5">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Malvina Cilla</h5>
-                                <div class="fst-italic text-muted">CTO</div>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </section>
