--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
                         <div class="col-lg-6">
-                            <h2 class="fw-bolder">Goals &amp; beyond</h2>
+                            <h2 class="fw-bolder">Goals</h2>
                             <p class="lead fw-normal text-muted mb-0">Our main goal is to facilitate access to reliable electric vehicle charging networks within the Region.</p>
                         </div>
                     </div>
@@ -73,29 +73,29 @@
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <div class="text-center">
-                        <h2 class="fw-bolder">SDG Goals</h2>
-                        <p class="lead fw-normal text-muted mb-5">Dedicated to quality and your success</p>
+                        <h2 class="fw-bolder">Sustainable Development Goals</h2>
+                        <p class="lead fw-normal text-muted mb-5">Contributing towards the SDG 7, 9 and 13</p>
                     </div>
                     <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid mb-4 px-4" src="assets/img/ep07.jpg" alt="..." />
                                 <h5 class="fw-bolder">Goal 7</h5>
-                                <div class="fst-italic text-muted">Founder &amp; CEO</div>
+
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid mb-4 px-4" src="assets/img/ep09.jpg" alt="..." />
                                 <h5 class="fw-bolder">Goal 9</h5>
-                                <div class="fst-italic text-muted">CFO</div>
+
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-sm-0">
                             <div class="text-center">
                                 <img class="img-fluid mb-4 px-4" src="assets/img/ep13.jpg" alt="..." />
                                 <h5 class="fw-bolder">Goal 13</h5>
-                                <div class="fst-italic text-muted">Operations Manager</div>
+
                             </div>
                         </div>
 
