--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
                                 <div class="col mb-5 mb-md-0 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
                                     <h2 class="h5">Accessories</h2>
-                                    <p class="mb-0">Electrical equipment, EV charging cabling, Earthing/Grounding solutions plus others</p>
+                                    <p class="mb-0">Electrical equipment, EV charging cabling, Earthing/Grounding solutions plus others.</p>
                                 </div>
                                 <div class="col h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-app"></i></div>
                                     <h2 class="h5">Electric Vehicles</h2>
-                                    <p class="mb-0">Guidance and recomendations on choosing electric vehicles</p>
+                                    <p class="mb-0">Guidance and recomendations on choosing electric vehicles.</p>
                                 </div>
                             </div>
                         </div>
