--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             <section class="py-5 bg-light" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/img/evc/wt/img_12.jpg" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Our vision</h2>
                             <p class="lead fw-normal text-muted mb-0">Our vision is to promote the switch from internal combustion vehicles to electric vehicles in an effort to improve air quality and reduce greenhouse gases.</p>
@@ -63,7 +63,7 @@
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/img/evc/wt/img_18.jpg" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Goals</h2>
                             <p class="lead fw-normal text-muted mb-0">Our main goal is to facilitate access to reliable electric vehicle charging networks within the Region.</p>
