--- a/about.html
+++ b/about.html
@@ -33,13 +33,13 @@
                 </div>
             </nav>
             <!-- Header-->
-            <header class="py-5">
+            <header class="py-5 bg-dark text-white">
                 <div class="container px-5">
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-xxl-6">
                             <div class="text-center my-5">
                                 <h1 class="fw-bolder mb-3">We are dedicated to be a leading turn-key provider of electric vehicle charging solutions.</h1>
-                                <p class="lead fw-normal text-muted mb-4">Our mission is to be a one-stop-shop turnkey provider for the infrastructure required to support the integration of electric vehicles within the SADC Region</p>
+                                <p class="lead fw-normal text-white-50 mb-4">Our mission is to be a one-stop-shop turnkey provider for the infrastructure required to support the integration of electric vehicles within the SADC Region</p>
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
 
             
             <!-- About section one-->
-            <section class="py-5 bg-light" id="scroll-target">
+            <section class="py-5 bg-gradient" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/img/evc/wt/img_12.jpg" alt="..." /></div>
@@ -60,13 +60,13 @@
                 </div>
             </section>
             <!-- About section two-->
-            <section class="py-5">
+            <section class="py-5 bg-dark text-white">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/img/evc/wt/img_18.jpg" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Goals</h2>
-                            <p class="lead fw-normal text-muted mb-0">Our main goal is to facilitate access to reliable electric vehicle charging networks within the Region.</p>
+                            <p class="lead fw-normal text-white-50 mb-0">Our main goal is to facilitate access to reliable electric vehicle charging networks within the Region.</p>
                         </div>
                     </div>
                 </div>
