--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,10 @@
                 </div>
             </nav>
             <!-- Page content-->
-            <section class="py-5">
+            <section class="py-5 bg-dark">
                 <div class="container px-5">
                     <!-- Contact form-->
-                    <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
+                    <div class="bg-dark text-white rounded-3 py-5 px-4 px-md-5 mb-5">
                         <div class="text-center mb-5">
                             <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
                             <h1 class="fw-bolder">Get in touch</h1>
