--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
     </head>
-    <body class="d-flex flex-column h-100">
+    <body class="d-flex bg-dark flex-column h-100">
         <main class="flex-shrink-0">
             <!-- Navigation-->
             <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
