--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
             </section>
             <!-- Testimonial section-->
-            <div class="py-5 bg-dark text-white">
+            <div class="py-5 bg-light ">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-10 col-xl-7">
