--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             <section class="py-5 bg-gradient" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/img/evc/wt/img_12.jpg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/img/evc/wt/img_11.jpg" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Our vision</h2>
                             <p class="lead fw-normal text-muted mb-0">Our vision is to promote the switch from internal combustion vehicles to electric vehicles in an effort to improve air quality and reduce greenhouse gases.</p>
@@ -110,7 +110,13 @@
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; UEV Solutions 2022</div></div>
-
+                    <div class="col-auto">
+                        <a class="link-light small" href="#!">Privacy</a>
+                        <span class="text-white mx-1">&middot;</span>
+                        <a class="link-light small" href="#!">Terms</a>
+                        <span class="text-white mx-1">&middot;</span>
+                        <a class="link-light small" href="#!">Contact</a>
+                    </div>
                 </div>
             </div>
         </footer>
