--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                         <div class="carousel-inner ">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="assets/img/evc/carosel/img_4.jpg" alt="First slide"> 
+                                <img class="d-block w-100" src="assets/img/evc/carosel/img_12.jpg" alt="First slide"> 
                                 
                                 <div class="container">
                                     <div class="carousel-caption text-start">
@@ -178,7 +178,7 @@
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-battery-charging"></i></div>
                                     <h2 class="h5">Solutions</h2>
-                                    <p class="mb-0">Home, Business, Public Sector charging solutions.</p>
+                                    <p class="mb-0">Home, Business, Public Sector charging solutions plus others.</p>
                                 </div>
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-bullseye"></i></div>
@@ -193,7 +193,7 @@
                                 <div class="col h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-app"></i></div>
                                     <h2 class="h5">Electric Vehicles</h2>
-                                    <p class="mb-0">Guidance and recomendations on choosing electric vehicles</p>
+                                    <p class="mb-0">Guidance and recomendations on choosing the right electric vehicles</p>
                                 </div>
                             </div>
                         </div>
