--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,8 @@
                 <div class="container px-5">
                     <a class="navbar-brand" href="index.html">UEV <img src="assets/img/uev_icon.png" width="30" height="30" > Solutions</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  
+                    <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -38,7 +39,7 @@
                         <div class="text-center mb-5">
                             <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
                             <h1 class="fw-bolder">Get in touch</h1>
-                            <p class="lead fw-normal text-muted mb-0">Email us at info@uevsolutions.com, or please complete the form below</p>
+                            <p class="lead fw-normal text-white-50 mb-0">Email us at info@uevsolutions.com, or please complete the form below</p>
                         </div>
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8 col-xl-6">
