--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-success">
                 <div class="container px-5">
                     <a class="navbar-brand" href="index.html">UEV <img src="assets/img/uev_icon.png" width="30" height="30" > Solutions</a>
 
@@ -106,17 +106,12 @@
             </section>
         </main>
         <!-- Footer-->
-        <footer class="bg-dark py-4 mt-auto">
+        <footer class="bg-success py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; UEV Solutions 2022</div></div>
-                    <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Contact</a>
-                    </div>
+                    <div class="col-auto"><a class="btn btn-link text-white" href="https://www.instagram.com/uevsolutions/" target="_blank"><i class="fab fa-instagram fa-lg mr-2"></i>Instagram</a></div>
+                    
                 </div>
             </div>
         </footer>
