--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <body class="d-flex bg-dark flex-column h-100">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-success">
                 <div class="container px-5">
                     <a class="navbar-brand" href="index.html">UEV <img src="assets/img/uev_icon.png" width="30" height="30" > Solutions</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -131,7 +131,7 @@
                                     <div class="carousel-caption bg-dark text-white text-anchor">
                                         <h1>Services.</h1>
                                         <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                        <p><a class="btn btn-lg btn-success" href="#">Browse gallery</a></p>
+                                        <p><a class="btn btn-lg btn-success" href="#">Learn more</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -144,7 +144,7 @@
                                     <div class="carousel-caption bg-dark text-white">
                                         <h1>Accessories.</h1>
                                         <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                        <p><a class="btn btn-lg btn-success" href="#">Browse gallery</a></p>
+                                        <p><a class="btn btn-lg btn-success" href="#">Learn more</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -226,13 +226,12 @@
             </section>
         </main>
         <!-- Footer-->
-        <footer class="bg-dark py-4 mt-auto">
+        <footer class="bg-success py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; UEV Solutions 2022</div></div>
-                    <div class="col-auto">
-
-                    </div>
+                    <div class="col-auto"><a class="btn btn-link text-white" href="https://www.instagram.com/uevsolutions/" target="_blank"><i class="fab fa-instagram fa-lg mr-2"></i>Instagram</a></div>
+                    
                 </div>
             </div>
         </footer>
