--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-success">
                 <div class="container px-5">
                     <a class="navbar-brand" href="index.html">UEV <img src="assets/img/uev_icon.png" width="30" height="30" > Solutions</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -37,7 +37,7 @@
                     <!-- Contact form-->
                     <div class="bg-dark text-white rounded-3 py-5 px-4 px-md-5 mb-5">
                         <div class="text-center mb-5">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
+                            <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
                             <h1 class="fw-bolder">Get in touch</h1>
                             <p class="lead fw-normal text-white-50 mb-0">Email us at info@uevsolutions.com, or please complete the form below</p>
                         </div>
@@ -76,12 +76,13 @@
             </section>
         </main>
         <!-- Footer-->
-        <footer class="bg-dark py-4 mt-auto">
+        <footer class="bg-success py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; UEV Solutions 2022</div></div>
-                    <div class="col-auto">
-
+                    <div class="col-auto"><a class="btn btn-link text-white" href="https://www.instagram.com/uevsolutions/" target="_blank"><i class="fab fa-instagram fa-lg mr-2"></i>Instagram</a></div>
+                    
+                </div>
                     </div>
                 </div>
             </div>
