--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                     <div class="carousel-caption bg-dark text-white text-anchor">
                                         <h1>Solutions.</h1>
                                         <p>Some representative placeholder content for the second slide of the carousel.</p>
-                                        <p><a class="btn btn-lg btn-success" href="#">Learn more</a></p>
+                                        <p><a class="btn btn-lg btn-success" href="solutions.html">Learn more</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -131,7 +131,7 @@
                                     <div class="carousel-caption bg-dark text-white text-anchor">
                                         <h1>Services.</h1>
                                         <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                        <p><a class="btn btn-lg btn-success" href="#">Learn more</a></p>
+                                        <p><a class="btn btn-lg btn-success" href="services.html">Learn more</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -144,7 +144,7 @@
                                     <div class="carousel-caption bg-dark text-white">
                                         <h1>Accessories.</h1>
                                         <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                        <p><a class="btn btn-lg btn-success" href="#">Learn more</a></p>
+                                        <p><a class="btn btn-lg btn-success" href="accessories.html">Learn more</a></p>
                                     </div>
                                 </div>
                             </div>
