--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                                 
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white text-anchor">
-                                        <h1>Ultimate Electric Vehicle Solutions.</h1>
-                                        <p>One-stop turnkey provider for the electric vehicles infrastructure.</p>
+                                        <h1>UEV Solutions.</h1>
+                                        <p>Ultimate Electric Vehicle Solutions is the one-stop turnkey provider for the electric vehicles infrastructure.</p>
                                         <p><a class="btn btn-lg btn-success" href="contact.html">Contact Us</a></p>
                                     </div>
                                 </div>
@@ -118,7 +118,7 @@
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white text-anchor">
                                         <h1>Solutions.</h1>
-                                        <p>Some representative placeholder content for the second slide of the carousel.</p>
+                                        <p></p>
                                         <p><a class="btn btn-lg btn-success" href="solutions.html">Learn more</a></p>
                                     </div>
                                 </div>
@@ -130,7 +130,7 @@
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white text-anchor">
                                         <h1>Services.</h1>
-                                        <p>Some representative placeholder content for the third slide of this carousel.</p>
+                                        <p> </p>
                                         <p><a class="btn btn-lg btn-success" href="services.html">Learn more</a></p>
                                     </div>
                                 </div>
@@ -143,7 +143,7 @@
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white">
                                         <h1>Accessories.</h1>
-                                        <p>Some representative placeholder content for the third slide of this carousel.</p>
+                                        <p> </p>
                                         <p><a class="btn btn-lg btn-success" href="accessories.html">Learn more</a></p>
                                     </div>
                                 </div>
