--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
                 </div>
             </nav>
             <!-- Page content-->
-            <section class="py-5 bg-dark">
-                <div class="container px-5">
+            <!-- <section class="py-5 bg-dark">
+                <div class="container px-5"> -->
                     <!-- Contact form-->
                     <div class="bg-dark text-white rounded-3 py-5 px-4 px-md-5 mb-5">
                         <div class="text-center mb-5">
@@ -53,7 +53,7 @@
                                 <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                                     <!-- Name input-->
                                     <div class="form-floating justify-content-center mb-5">
-                                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe44PSg9X4VevKVg5rvm_QhEuq-HwleLvK3mRVWyJNJCjmRWw/viewform?embedded=true" width="640" height="1400" frameborder="0" marginheight="0" marginwidth="0">Loading…
+                                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe44PSg9X4VevKVg5rvm_QhEuq-HwleLvK3mRVWyJNJCjmRWw/viewform?embedded=true" width="450" height="1400" frameborder="0" marginheight="0" marginwidth="0">Loading…
                                         </iframe>
                                         
                                     </div>
@@ -68,12 +68,9 @@
                         </div>
                     </div>
                     <!-- Contact cards-->
-                    <div class="row gx-5 row-cols-2 row-cols-lg-4 py-5">
-     
 
-                    </div>
-                </div>
-            </section>
+                <!-- </div>
+            </section> -->
         </main>
         <!-- Footer-->
         <footer class="bg-success py-4 mt-auto">
