--- a/faq.html
+++ b/faq.html
@@ -39,8 +39,8 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-xxl-6">
                             <div class="text-center my-5">
-                                <h1 class="fw-bolder mb-3">FAQ</h1>
-                                <p class="lead fw-normal text-white-50 mb-4">Coming Soon</p>
+                                <h1 class="fw-bolder mb-3">UEV Solutions FAQs</h1>
+                                <p class="lead fw-normal text-white-50 mb-4">Here you will find all you need to know about Electric Vehicles and Electric Vehicle Charging Points.</p>
                             </div>
                         </div>
                     </div>
@@ -50,36 +50,112 @@
             <section class="py-5 bg-dark text-dark">
                 <div class="container px-5">
                     <div class="accordion accordion-flush" id="accordionFlushExample">
+
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                              Accordion Item #1
+                                What is UEV Solutions?
                             </button>
                           </h2>
                           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                            <div class="accordion-body">UEV Solutions (Ultimate Electric Vehicle Solutions) as a business seeks is a turn-key provider of electric vehicle charging solutions. Its business structure is strategically positioned to facilitate operations necessary to provide a one-stop-shop turnkey engineering service.</div>
                           </div>
                         </div>
+
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="flush-headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                              Accordion Item #2
+                                Where are we based?
                             </button>
                           </h2>
                           <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                            <div class="accordion-body">We have a presents in the UK and SADC region. Our team is composed of professionally registered engineers. Electrical, Electronics and Mechanical engineers with broad experiences.
+                            </div>
                           </div>
                         </div>
+
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="flush-headingThree">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                              Accordion Item #3
+                                What do we offer?
                             </button>
                           </h2>
                           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                            <div class="accordion-body">In order to promote the use of electric vehicles it is important to develop appropriate electric vehicle charging infrastructure. Our one-stop turnkey engineering service consist of:
+                                Planning;location, charger type, power requirements 
+                                Specification; charger specification, project and design specifications
+                                Designing; electrical design, installation details
+                                Supplying; charge points, charging cables, electrical equipment, accessories
+                                Installation; Electrical installation, groundwork and civils, testing and commisioning
+                                </div>
                           </div>
                         </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingThree">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                What is an EV?
+                              </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                              <div class="accordion-body">An electric vehicle (EV) runs on electricity. EV’s have an electric motor so they do not require a petrol or diesel engine. With them running on electricity, UEV Solutions will advise on the right electrical infrastructure, accessories and will enable its clients to select the appropriate charging solutions.</div>
+                            </div>
+                          </div>
+
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingThree">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                What is electric vehicle charging equipment?
+                              </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                              <div class="accordion-body">Electric vehicle (EVs) charging equipment conveniently and safely connects EVs to the mains electricity supply. </div>
+                            </div>
+                          </div>
+
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                Where to install charging equipment be installed?
+                              </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                              <div class="accordion-body">UEV Solutions provides charging equipment suitable for:
+                                Home/domestic installations (on-street and private driveways) 
+                                Business charging (Fleet charging and workplace) 
+                                Destination (Car parks, supermarkets, transport terminals) 
+                                Public charging (on-street charging)
+                                </div>
+                            </div>
+                          </div>
+  
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingTwo">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                How long does it take to charge an electric car
+                              </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                              <div class="accordion-body">This will depend on the type of charger you use and the size of your car’s battery.
+                                Slow chargers (3kW - 6kW AC), typically take between 6-12 hours to recharge.
+                                Fast chargers (7kW to 22kW AC), typically takes between 3-7 hours
+                                Rapid Chargers (43kW to 50kW), typically capable of charging cars to 80% in 20-40 minutes, depending on battery size.
+                                </div>
+                            </div>
+                          </div>
+  
+                          <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingThree">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                What is the battery range and life on an EV
+                              </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                              <div class="accordion-body">Most new EV’s have a range of around 130 miles, and some can go up to 300 miles on one charge. The battery life of an EV will vary depending on the make and model of the vehicle. Most manufacturers offer an eight year or 100,000 mile warranty for their EV batteries</div>
+                            </div>
+                          </div>
+
+
                       </div>
                 </div>
             </section>
