--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                         
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white">
-                                        <h1>Accessories.</h1>
+                                        <h1>FAQs.</h1>
                                         <p> </p>
-                                        <p><a class="btn btn-lg btn-success" href="accessories.html">Learn more</a></p>
+                                        <p><a class="btn btn-lg btn-success" href="faq.html">Learn more</a></p>
                                     </div>
                                 </div>
                             </div>
