--- a/faq.html
+++ b/faq.html
@@ -82,14 +82,21 @@
                           </h2>
                           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">In order to promote the use of electric vehicles it is important to develop appropriate electric vehicle charging infrastructure. Our one-stop turnkey engineering service consist of:
-                                Planning;location, charger type, power requirements 
-                                Specification; charger specification, project and design specifications
-                                Designing; electrical design, installation details
-                                Supplying; charge points, charging cables, electrical equipment, accessories
-                                Installation; Electrical installation, groundwork and civils, testing and commisioning
-                                </div>
-                          </div>
-                        </div>
+                               <dl>
+                                    <dt>Planning</dt>
+                                    <dd>- Location, Charger type, Power requirements.</dd>
+                                    <dt>Specification</dt>
+                                    <dd>- Project, Design and Technical Specifications.</dd>
+                                    <dt>Designing</dt>
+                                    <dd>- Electrical design, Installation details.</dd>
+                                    <dt>Supplying</dt>
+                                    <dd>- Charge points, Charging cables, Electrical equipment, Accessories</dd>
+                                    <dt>Installation</dt>
+                                    <dd>- Electrical installation, Groundwork and Civils, Testing and Commissioning</dd>
+                                  </dl>
+                                
+                             </div>
+                         </div>
 
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="flush-headingFour">
@@ -121,10 +128,18 @@
                             </h2>
                             <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
                               <div class="accordion-body">UEV Solutions provides charging equipment suitable for:
-                                Home/domestic installations (on-street and private driveways) 
-                                Business charging (Fleet charging and workplace) 
-                                Destination (Car parks, supermarkets, transport terminals) 
-                                Public charging (on-street charging)
+
+                                <dl>
+                                    <dt>Home charging</dt>
+                                    <dd>- On-street, Driveways type.</dd>
+                                    <dt>Business charging</dt>
+                                    <dd>- Fleet, Workplace.</dd>
+                                    <dt>Destination</dt>
+                                    <dd>- Car parks, Supermarkets, Transport terminals.</dd>
+                                    <dt>Public charging</dt>
+                                    <dd>- On-street.</dd>
+                                  </dl>
+                          
                                 </div>
                             </div>
                           </div>
@@ -137,9 +152,14 @@
                             </h2>
                             <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
                               <div class="accordion-body">This will depend on the type of charger you use and the size of your car’s battery.
-                                Slow chargers (3kW - 6kW AC), typically take between 6-12 hours to recharge.
-                                Fast chargers (7kW to 22kW AC), typically takes between 3-7 hours
-                                Rapid Chargers (43kW to 50kW), typically capable of charging cars to 80% in 20-40 minutes, depending on battery size.
+                                <dl>
+                                    <dt>Slow chargers</dt>
+                                    <dd>(3kW - 6kW AC), typically take between 6-12 hours to recharge.</dd>
+                                    <dt>Fast chargers</dt>
+                                    <dd>(7kW to 22kW AC), typically takes between 3-7 hours</dd>
+                                    <dt>Rapid Chargers</dt>
+                                    <dd>(43kW to 50kW), typically capable of charging cars to 80% in 20-40 minutes, depending on battery size.</dd>
+                                  </dl>
                                 </div>
                             </div>
                           </div>
