--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="solutions.html">Solutions</a></li>
+                            <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Accessories</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                             <li class="nav-item"><a class="nav-link" href="faq.html">FAQs</a></li>
@@ -107,7 +110,7 @@
                                 <div class="container">
                                     <div class="carousel-caption bg-dark text-white text-anchor">
                                         <h1>UEV Solutions.</h1>
-                                        <p>Ultimate Electric Vehicle Solutions is the one-stop turnkey provider for the electric vehicles infrastructure.</p>
+                                        <p>Ultimate Electric Vehicle Solutions.</p>
                                         <p><a class="btn btn-lg btn-success" href="contact.html">Contact Us</a></p>
                                     </div>
                                 </div>
