--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="solutions.html">Solutions</a></li>
                             <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html">Accessories</a></li>
+                            <li class="nav-item"><a class="nav-link" href="accessories.html">Accessories</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                             <li class="nav-item"><a class="nav-link" href="faq.html">FAQs</a></li>
