--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <section class="py-5 bg-dark text-white" id="features">
                 <div class="container px-5 my-5 bg-dark">
                     <div class="row gx-5">
-                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">What we offer.</h2></div>
+                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">What is UEV Solutions.</h2></div>
                         <div class="col-lg-8">
                             <div class="row gx-5 row-cols-1 row-cols-md-2">
                                 <div class="col mb-5 h-100">
@@ -203,13 +203,47 @@
                     </div>
                 </div>
             </section>
+
+                        <!-- Features section-->
+                        <section class="py-5 bg-light text-dark" id="features">
+                            <div class="container px-5 my-5 bg-light">
+                                <div class="row gx-5">
+                                    <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">What do we offer.</h2></div>
+                                    <div class="col-lg-8">
+                                        <div class="row gx-5 row-cols-1 row-cols-md-2">
+                                            <div class="col mb-5 h-100">
+                                                <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-battery-charging"></i></div>
+                                                <h2 class="h5">Solutions</h2>
+                                                <p class="mb-0">Home, Business, Public Sector charging solutions plus others.</p>
+                                            </div>
+                                            <div class="col mb-5 h-100">
+                                                <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-bullseye"></i></div>
+                                                <h2 class="h5">Services</h2>
+                                                <p class="mb-0">Design, Supply, Install (Full turn-key solution). Planning and Engineering Consulting.</p>
+                                            </div>
+                                            <div class="col mb-5 mb-md-0 h-100">
+                                                <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
+                                                <h2 class="h5">Accessories</h2>
+                                                <p class="mb-0">Electrical equipment, EV charging cabling, Earthing/Grounding solutions plus others</p>
+                                            </div>
+                                            <div class="col h-100">
+                                                <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-app"></i></div>
+                                                <h2 class="h5">Electric Vehicles</h2>
+                                                <p class="mb-0">Guidance and recomendations on choosing the right electric vehicles</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+            
             <!-- Testimonial section-->
-            <div class="py-5 bg-light ">
+            <div class="py-5 bg-dark ">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-10 col-xl-7">
                             <div class="text-center">
-                                <div class="fs-4 mb-4 fst-italic">We are working hard to complete our website. In the mean time, please feel free to contact us. </div>
+                                <div class="fs-4 mb-4 text-white fst-italic">We are working hard to complete our website. In the mean time, please feel free to contact us. </div>
                                 
                                 <div class="d-flex align-items-center justify-content-center">
 
