--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <body class="d-flex bg-dark flex-column h-100">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-success">
+            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
                     <a class="navbar-brand  mb-0 h1" href="index.html">UEV <img src="assets/img/uev_icon.png" width="30" height="30" > Solutions</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -181,23 +181,16 @@
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-battery-charging"></i></div>
                                     <h2 class="h5">Solutions</h2>
-                                    <p class="mb-0">Home, Business, Public Sector charging solutions plus others.</p>
+                                    <p class="mb-0">UEV Solutions is a pioneer of electric vehicle charging solutions. We provide comprehensive EV infrastructure consultancy services for domestic, commercial and public sector clients. We are able to support, advise and develop EV charging strategies and installations.
+                                        On our website, you will find our selected electric vehicle products and accessories. We are adding to this list of products all the time.
+                                        </p>
                                 </div>
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-bullseye"></i></div>
-                                    <h2 class="h5">Services</h2>
-                                    <p class="mb-0">Design, Supply, Install (Full turn-key solution). Planning and Engineering Consulting.</p>
+                                    <h2 class="h5">Aims</h2>
+                                    <p class="mb-0">We aim to offer turn-key engineering consulting services to our clients and advice on all aspects of electric vehicle charging. Our dedicated team carries out all stages of the design process, from feasibility studies, surveys and design to install and commissioning.</p>
                                 </div>
-                                <div class="col mb-5 mb-md-0 h-100">
-                                    <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                    <h2 class="h5">Accessories</h2>
-                                    <p class="mb-0">Electrical equipment, EV charging cabling, Earthing/Grounding solutions plus others</p>
-                                </div>
-                                <div class="col h-100">
-                                    <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-app"></i></div>
-                                    <h2 class="h5">Electric Vehicles</h2>
-                                    <p class="mb-0">Guidance and recomendations on choosing the right electric vehicles</p>
-                                </div>
+
                             </div>
                         </div>
                     </div>
