--- a/solutions.html
+++ b/solutions.html
@@ -16,7 +16,7 @@
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-success">
+            <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
                     <a class="navbar-brand mb-0 h1" href="index.html">UEV <img src="assets/img/uev_icon.png" width="30" height="30" > Solutions</a>
 
